fix(office-overview): move header in cms, adjust sizing and spacing

--- a/components/office-overview/office-overview.less
+++ b/components/office-overview/office-overview.less
@@ -4,6 +4,13 @@
 .office-overview {
 	.clearfix;
 
+	.office-overview-header {
+		margin-bottom: @spacing-default*4;
+		text-align: center;
+		font-size: @heading-s;
+		line-height: @line-height-heading-s;
+	}
+
 	@media @screen-small {
 		.office-card {
 			margin-left: auto;
@@ -14,6 +21,11 @@
 	}
 
 	@media @screen-medium {
+		.office-overview-header {
+			font-size: @heading-m;
+			line-height: @line-height-heading-m;
+		}
+
 		.office-card {
 			float: left;
 			margin: 0 @spacing-medium @spacing-default*7 0;
@@ -22,6 +34,14 @@
 			&:last-child {
 				margin-right: 0;
 			}
+		}
+	}
+
+	@media @screen-large {
+		.office-overview-header {
+			margin-bottom: @spacing-default*6;
+			font-size: @heading-l;
+			line-height: @line-height-heading-l;
 		}
 	}
 }
